<resources>
    <string name="app_name">WearableApp</string>
    <string name="message">Watch face tapped</string>
    <string name="my_analog_name">My Analog</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_meas_heart_rate">MeasHeartRateActivity</string>
    <string name="heart_rate_start">Start continuous heart rate measurements</string>
    <string name="heart_rate_export_message">All HR data will be \n exported to a public folder \n and then removed</string>
    <string name="heart_rate_export">Exporting data as .csv...</string>
    <string name="heart_rate_exported_data">Successfully exported \nHR data!</string>
    <string name="my_digital_name">My Digital</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="confirm">Confirm</string>
    <string name="menu_item">Menu Item</string>
    <string name="title_activity_export_heart_rate">ExportHeartRateActivity</string>
    <string name="sensor_notification">Sensor Notification</string>
    <string name="sensor_title">Heart Rate Monitor</string>
    <string name="sensor_desc">Heart Rate Monitoring is started</string>
    <string name="title_activity_export_heart_rate">ExportHeartRateActivity</string>
    <string name="sensor_notification">Sensor Notification</string>
    <string name="sensor_title">Heart Rate Monitor</string>
    <string name="sensor_desc">Heart Rate Monitoring is started</string>
    <string name="sensor_permission_required">App need sensor permission to monitor heart rate</string>
    <string name="export_data_failed">Heart rate data exporting failed</string>
</resources>