<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".presentation.ui.MeasHeartRateActivity"
    tools:deviceIds="wear">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flHeartRateIndicatorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/floatLikeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/dimens_20dp"
                    android:background="@drawable/ic_baseline_favorite_24"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/heratRateCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/dimens_10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="--"
                    android:textColor="@color/color_berry"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/floatLikeId"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHeartStartId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimens_10dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/flHeartRateIndicatorId">

                <TextView
                    android:id="@+id/tvHeartStartId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/ic_baseline_south_24"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/dimens_15dp"
                    android:paddingBottom="@dimen/dimens_15dp"
                    android:text="@string/heart_rate_start"
                    android:textColor="@color/color_berry"
                    android:textSize="@dimen/font_10sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvHeartRateStartId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_40dp"
                    android:layout_marginEnd="@dimen/dimens_40dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal|center"
                    android:padding="@dimen/dimens_8dp"
                    android:text="@string/start"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_10sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeartStartId" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHeartStopId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimens_10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/flHeartRateIndicatorId">

                <LinearLayout
                    android:id="@+id/llHeartGraphId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:layout_marginBottom="@dimen/dimens_10dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.robinhood.spark.SparkView
                        android:id="@+id/heartRateGraphId"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_60dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvHeartRateStopId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_40dp"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:layout_marginEnd="@dimen/dimens_40dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal|center"
                    android:padding="@dimen/dimens_8dp"
                    android:text="@string/stop"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_10sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llHeartGraphId" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>